[new] Add JWT authentication

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LibraryDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JwtSEttings": {
+    "Issuer": "",
+    "Audience": true,
+    "SecretKey": ""
   }
 }
